cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_server_commands"
version = "0.1.0"
edition = "2021"
description = "Implementation of several Buck commands"

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
indent_write = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
os_str_bytes = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
tempfile = { workspace = true }
threadpool = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

dice = { path = "../dice/dice" }
gazebo = { workspace = true }

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
buck2_execute = { path = "../buck2_execute" }
buck2_interpreter_for_build = { path = "../buck2_interpreter_for_build" }
buck2_node = { path = "../buck2_node" }
buck2_query = { path = "../buck2_query" }
buck2_server_ctx = { path = "../buck2_server_ctx" }
cli_proto = { path = "../cli_proto" }
install_proto = { path = "../install_proto" }

[features]
# @oss-disable: default = ["eden_materializer"]
# @oss-disable: eden_materializer = []
eden_materializer = [] # @oss-enable
