[package]
name = "buck2_server_commands"
version = "0.1.0"
edition = "2021"
description = "Implementation of several Buck commands"

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
futures = { workspace = true }
indent_write = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
os_str_bytes = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
siphasher = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dice = { path = "../dice/dice" }
dupe = { workspace = true }
gazebo = { workspace = true }
allocative = { workspace = true }
starlark_map = { workspace = true }

buck2_build_api = { workspace = true }
buck2_common = { workspace = true }
buck2_core = { workspace = true }
buck2_data = { workspace = true }
buck2_events = { workspace = true }
buck2_execute = { workspace = true }
buck2_interpreter_for_build = { workspace = true }
buck2_node = { workspace = true }
buck2_query = { workspace = true }
buck2_server_ctx = { workspace = true }
cli_proto = { path = "../cli_proto" }
install_proto = { path = "../install_proto" }
