[package]
name = "buck2_server_ctx"
version = "0.1.0"
edition = "2021"
description = "Common parts of Buck commands"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
tracing = "0.1.22"

dice = { path = "../dice/dice" }
gazebo = { path = "../gazebo/gazebo" }

# Please do not add dependency on `buck2_build_api`.
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_events = { path = "../buck2_events" }
cli_proto = { path = "../cli_proto" }
