[package]
name = "buck2_test"
version = "0.1.0"
edition = "2021"
description = "Buck V2 test runner"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.24"
dashmap = "4.0.2"
futures = "0.3"
chrono = "0.4.19"
derive_more = "0.99.3"
indexmap = { version = "1.6", features = ["serde-1"] }
libc = "0.2"
once_cell = "1.3"
tokio = { version = "1.5", features = ["full"]}
tracing = "0.1.22"
uuid = { version = "0.8", features = ["v4"] }

gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
dice = { path = "../dice/dice" }

buck2_build_api = { path = "../buck2_build_api" }
buck2_common = { path = "../buck2_common" }
buck2_core = { path = "../buck2_core" }
buck2_data = { path = "../buck2_data" }
buck2_interpreter = { path = "../buck2_interpreter" }
buck2_node = { path = "../buck2_node" }
downward_api = { path = "../downward_api" }
events = { path = "../events" }
host_sharing = { path = "../host_sharing" }
test_api = { path = "../test_api" }
buck2_grpc = { path = "../buck2_grpc" }
