[package]
name = "buck2_test_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.49"
derive_more = "0.99.3"
gazebo.version = "0.8.0"
gazebo.features = ["str_pattern_extensions"]
# @oss-disable: gazebo.path = "../gazebo/gazebo"
gazebo_lint.version = "0.1"
gazebo_lint.optional = true
# @oss-disable: gazebo_lint.path = "../gazebo_lint/gazebo_lint"
buck2_core = { path = "../buck2_core" }
downward_api = { path = "../downward_api" }
downward_api_proto = { path = "../downward_api_proto" }
events = { path = "../events" }
futures = "0.3"
host_sharing = { path = "../host_sharing" }
tonic = "0.7.2"
tower-layer = "0.3.1"
tower-service = "0.3.2"
tokio = {version = "1.5", features = ["full"]}
tracing = "0.1.22"
prost-types = "0.10"

buck2_grpc = { path = "../buck2_grpc" }
buck2_test_proto = { path = "../buck2_test_proto" }

[dev-dependencies]
assert_matches = "1.5"

[features]
# @oss-disable: default = ["gazebo_lint"]
