cargo-features = ["workspace-inheritance"]

[package]
name = "buck2_test_proto"

edition = "2021"
version = "0.1.0"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
buck2_protoc_dev = { path = "../buck2_protoc_dev" }
tonic-build = { workspace = true }
